@@ -1,6 +1,8 @@
 CHANGES
 =======
 
+* Fixed bot options
+
 1.0.4
 -----
 
